--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@ output:
   html_document:
     toc: true
     toc_float: true
+    code_folding: hide
 
 knitr:
   opts_knit:
@@ -17,7 +18,7 @@ What if I add some text here?
 ![](https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif)
 
 
-## Here's a subsection
+# Here's a subsection
 
 And here's some addition text...
 
@@ -25,7 +26,7 @@ And here's some addition text...
 rnorm(10)
 ```
 
-## Links
+# Links
 
 Let's link tot useful tools for data science:
 
@@ -33,11 +34,11 @@ Let's link tot useful tools for data science:
 * [P8105](https://p8105.com)
 
 
-## Local image
+# Local image
 
 Here's my cat, Niuniu:
 
-![](image/Niuniu.jpg)
+<image src="image/Niuniu.jpg"style="width:75%">
 
 
 ## Link to page within the site
@@ -45,10 +46,21 @@ Here's my cat, Niuniu:
 [About me](about.html)
 
 
+## Quarterly Results {.tabset}
+
+### By Product
+
+This is my first tab and i can do stuff
 
 
+### By Region
+
+This is my second tab and do other stuff
 
 
+## This is a new section
+
+and it's really great
 
 
 
